fixed styles on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -49,15 +49,16 @@ body {
 }
 
 .disabled {
-  visibility: hidden;
+  opacity: 0.2;
+  filter: grayscale(1);
 }
 
 .credits {
   opacity: 0.25;
   position: absolute;
-  bottom: 1vw;
-  left: 1vw;
-  font-size: 1.5rem;
+  bottom: 1vh;
+  left: 2vw;
+  font-size: 2rem;
 }
 
 .credits a, .credits a:active, .credits a:visited {
@@ -75,11 +76,11 @@ body {
   justify-content: center;
   height: 100vh;
   position: absolute;
-  left: 3rem;
+  left: 2vw;
   top: 0;
   opacity: 0.5;
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 2rem;
   text-shadow: 1px 1px 0px var(--text-shadow-color);
 }
 
@@ -151,7 +152,7 @@ body {
     font-size: 1.25rem;
     border-radius: 4px;
     border: 2px solid #000000C8;
-    text-shadow: 3px 3px 1px var(--text-shadow-color);
+    text-shadow: 3px 3px 4px var(--text-shadow-color);
     box-shadow: 4px 4px 8px var(--text-shadow-color);
   }
 
@@ -165,7 +166,7 @@ body {
   }
 }
 
-@media screen and (orientation:landscape) {
+@media screen and (orientation:landscape) and (max-width: 700px) {
   :root {
     --mobile: true;
   }
